--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "sanity start",
     "build": "sanity build",
     "deploy": "sanity deploy",
-    "deploy-graphql": "sanity graphql deploy"
+    "deploy-graphql": "sanity graphql deploy",
+    "install": "npm install --legacy-peer-deps"
   },
   "keywords": [
     "sanity"
@@ -24,7 +25,7 @@
   "devDependencies": {
     "@sanity/eslint-config-studio": "^5.0.1",
     "@types/react": "^18.0.25",
-    "eslint": "^9.9.0",
+    "eslint": "^8.57.1",
     "prettier": "^3.0.2",
     "typescript": "^5.1.6"
   },
